# Learnings

./: .gitignore
python/builtins/: .python-version  config.ini  configparser_.py  pyproject.toml  readme.md
python/customs/: .python-version  pyproject.toml  repeat.py  test_repeat.py
python/llama_index/: readme.md
python/pycaret/: .python-version  pyproject.toml
