[tool.poetry]
name = "python-builtin-tutorials"
version = "0.1.0"
description = ""
authors = ["Jooeon Kim <joo2theeon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
