[tool.poetry]
name = "pycaret-"
version = "0.1.0"
description = ""
authors = ["Jooeon Kim <joo2theeon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
kaleido = "0.2.1"
pycaret = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
